--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="index.html">Urban <span>by TEMPLATED</span></a></div>
+				<div class="logo"><a href="index.html">DR. LYNCH</span></a></div>
 				<a href="#menu">Menu</a>
 			</header>
 
@@ -32,8 +32,8 @@
 			<section id="banner">
 				<div class="inner">
 					<header>
-						<h1>This is Urban</h1>
-						<p>Aliquam libero augue varius non odio nec faucibus congue<br />felis quisque a diam rutrum tempus massa accumsan faucibus purus.</p>
+						<h1>Patricia F. Lynch, D.M.D.</h1>
+						<p>255 4th St. Hoboken, N.J. <br />felis quisque a diam rutrum tempus massa accumsan faucibus purus.</p>
 					</header>
 					<a href="#main" class="button big scrolly">Learn More</a>
 				</div>
