--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <html>
 	<head>
 		<title>DR. LYNCH</title>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+   		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -33,7 +36,7 @@
 				<div class="inner">
 					<header>
 						<h1>Patricia F. Lynch, D.M.D.</h1>
-						<p>255 4th St. Hoboken, N.J. <br />felis quisque a diam rutrum tempus massa accumsan faucibus purus.</p>
+						<p><span class="glyphicon glyphicon-pushpin"></span> 255 4th St. Hoboken, N.J. <br /> <span class="glyphicon glyphicon-earphone"></span> (201)-610-9000</p>
 					</header>
 					<a href="#main" class="button big scrolly">Learn More</a>
 				</div>
@@ -53,9 +56,8 @@
 										</div>
 									</div>
 									<div class="col col2">
-										<h3>Maecenas a gravida quam</h3>
-										<p>Etiam posuere hendrerit arcu, ac blandit nulla. Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex.</p>
-										<p>Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex. </p>
+										<h3>Meet Dr. Lynch</h3>
+										<p>Dr. Patricia Lynch graduated from the New Jersey Dental School after receiving her Masters degree from Fairleigh Dickinson University Dental School in 1985, where she studied the antibiotic treatment of periodontal disease. She has been practicing dentistry in Hoboken since 1991 and specializes in veneers and aesthetic cases. Dr. Lynch is certified in Restylane cosmetic procedures, a Certified Brite Smile provider, and was voted the top certified Invisalign provider in 2003.</p>
 										<a href="#" class="button">Learn More</a>
 									</div>
 								</div>
