--- a/index.html
+++ b/index.html
@@ -16,12 +16,6 @@
 	</head>
 	<body>
 
-		<!-- Header -->
-			<header id="header" class="alt">
-				<div class="logo"><a href="index.html">DR. LYNCH</span></a></div>
-				<a href="#menu">Menu</a>
-			</header>
-
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
@@ -36,7 +30,7 @@
 				<div class="inner">
 					<header>
 						<h1>Patricia F. Lynch, D.M.D.</h1>
-						<p><span class="glyphicon glyphicon-pushpin"></span> 255 4th St. Hoboken, N.J. <br /> <span class="glyphicon glyphicon-earphone"></span> (201)-610-9000</p>
+						<p>255 4th St. Hoboken, N.J.<br />(201)-610-9000</p>
 					</header>
 					<a href="#main" class="button big scrolly">Learn More</a>
 				</div>
@@ -52,13 +46,12 @@
 								<div class="flex flex-2">
 									<div class="col col1">
 										<div class="image round fit">
-											<a href="generic.html" class="link"><img src="images/pic01.jpg" alt="" /></a>
+											<img src="images/pic01.jpg" alt="" />
 										</div>
 									</div>
 									<div class="col col2">
 										<h3>Meet Dr. Lynch</h3>
 										<p>Dr. Patricia Lynch graduated from the New Jersey Dental School after receiving her Masters degree from Fairleigh Dickinson University Dental School in 1985, where she studied the antibiotic treatment of periodontal disease. She has been practicing dentistry in Hoboken since 1991 and specializes in veneers and aesthetic cases. Dr. Lynch is certified in Restylane cosmetic procedures, a Certified Brite Smile provider, and was voted the top certified Invisalign provider in 2003.</p>
-										<a href="#" class="button">Learn More</a>
 									</div>
 								</div>
 						</div>
@@ -69,63 +62,88 @@
 						<div class="inner">
 							<div class="flex flex-2">
 								<div class="col col2">
-									<h3>Suspendisse quis massa vel justo</h3>
-									<p>Etiam posuere hendrerit arcu, ac blandit nulla. Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex.</p>
-									<p>Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex. </p>
-									<a href="#" class="button">Learn More</a>
+									<h3>Request an Appointment</h3>
+									<p>The first step towards a beautiful and healthy smile is to schedule an appointment. Please contact the office by phone or use the below link to schedule an appointment through solution reach.</p>
+									<a href="https://reviews.solutionreach.com/vs/patricia_f_lynch_dds/appt" class="button">Make Appointment</a>
 								</div>
 								<div class="col col1 first">
 									<div class="image round fit">
-										<a href="generic.html" class="link"><img src="images/pic02.jpg" alt="" /></a>
+										<img src="images/pic02.jpg" alt="" />
 									</div>
 								</div>
 							</div>
 						</div>
-					</section>
+					</section>				
 
 				<!-- Section -->
 					<section class="wrapper style1">
 						<div class="inner">
 							<header class="align-center">
-								<h2>Aliquam ipsum purus dolor</h2>
-								<p>Cras sagittis turpis sit amet est tempus, sit amet consectetur purus tincidunt.</p>
+								<h2>View Our Office</h2>
 							</header>
-							<div class="flex flex-3">
-								<div class="col align-center">
-									<div class="image round fit">
-										<img src="images/pic03.jpg" alt="" />
-									</div>
-									<p>Sed congue elit malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet. </p>
-									<a href="#" class="button">Learn More</a>
+							<div class="carousel slide" id="myCarousel" data-ride="carousel">
+								<!-- Indicators -->
+								  <ol class="carousel-indicators">
+								    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+								    <li data-target="#myCarousel" data-slide-to="1"></li>
+								    <li data-target="#myCarousel" data-slide-to="2"></li>
+								  </ol>
+
+								  <!-- Wrapper for slides -->
+								  <div class="carousel-inner">
+								    <div class="item active">
+								      <img src="images/pic03.jpg" alt="">
+								    </div>
+
+								    <div class="item">
+								      <img src="images/pic03.jpg" alt="">
+								    </div>
+
+								    <div class="item">
+								      <img src="images/pic03.jpg" alt="">
+								    </div>
+								  </div>
+
+								  <!-- Left and right controls -->
+								  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+								    <span class="glyphicon glyphicon-chevron-left"></span>
+								    <span class="sr-only">Previous</span>
+								  </a>
+								  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+								    <span class="glyphicon glyphicon-chevron-right"></span>
+								    <span class="sr-only">Next</span>
+								  </a>
+							</div>
+						</div>
+					</section>
+
+
+			</div>
+
+				<!-- Section -->
+					<section class="wrapper style2">
+						<div class="inner">
+							<div class="flex flex-2">
+								<div class="col col2">
+									<h3>See Our Reviews</h3>
+									<p>We are constantly getting a stream of great reviews, but don't take our word for it; use the link below to find out what people are saying!</p>
+									<a href="https://reviews.solutionreach.com/vs/patricia_f_lynch_dds" class="button">See Reviews</a>
 								</div>
-								<div class="col align-center">
+								<div class="col col1 first">
 									<div class="image round fit">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images/pic06.jpg" alt="" />
 									</div>
-									<p>Sed congue elit malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet. </p>
-									<a href="#" class="button">Learn More</a>
-								</div>
-								<div class="col align-center">
-									<div class="image round fit">
-										<img src="images/pic04.jpg" alt="" />
-									</div>
-									<p>Sed congue elit malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet. </p>
-									<a href="#" class="button">Learn More</a>
 								</div>
 							</div>
 						</div>
 					</section>
 
-			</div>
-
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="copyright">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li>
 					</ul>
 					<p>&copy; Untitled. All rights reserved. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Unsplash</a>.</p>
 				</div>
