--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
    		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<meta charset="utf-8" />
-		<meta name="description" content="Serving Hoboken for over 25 years. Specializing in Veneers, Teeth Whitenings, Invisalign, and General & Cosmetic Dentistry. Contact at (201)-610-9000.">
-		<meta name="keywords" content="hoboken dentist, dentist, patricia lynch, dr lynch, veneers, teeth whitening, invisalign">
+		<meta name="description" content="Serving Hoboken for over 25 years. Specializing in Veneers, Teeth Whitenings, Invisalign, and General and Cosmetic Dentistry. Contact at (201)-610-9000." />
+		<meta name="keywords" content="hoboken dentist, dentist, patricia lynch, dr lynch, veneers, teeth whitening, invisalign" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
