updating appointment req link to weave

--- a/index.html
+++ b/index.html
@@ -65,8 +65,15 @@
 							<div class="flex flex-2">
 								<div class="col col2">
 									<h3>Request an Appointment</h3>
-									<p>The first step towards a beautiful and healthy smile is to schedule an appointment. Please contact the office by phone or use the below link to schedule an appointment through solution reach.</p>
-									<a href="https://reviews.solutionreach.com/vs/patricia_f_lynch_dmd/appt" class="button">Make Appointment</a>
+									<p>The first step towards a beautiful and healthy smile is to schedule an appointment. 
+
+									We have several convient ways to request your appointment! You can:</p>
+									 <ul>
+									 	<li>Call or text us at (201) 610-9000</li>
+									 	<li> Email us at drpatricilynch@gmail.com</li>
+									 	<li> Use the link below to use our online appointment system</li>
+									 </ul> 
+									<a href="https://book2.getweave.com/ebfc41dd-ae62-43f4-856b-485636f0418d/request-appointment" class="button">Make Appointment</a>
 								</div>
 								<div class="col col1 first">
 									<div class="image round fit">
