--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 								<div class="col col2">
 									<h3>See Our Reviews</h3>
 									<p>We are constantly getting a stream of great reviews, but don't take our word for it; use the link below to find out what people are saying!</p>
-									<a href="https://reviews.solutionreach.com/vs/patricia_f_lynch_dmd" class="button">See Reviews</a>
+									<a href="./reviews/reviews.html" class="button">See Reviews</a>
 								</div>
 								<div class="col col1 first">
 									<div class="image round fit">
